--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--
 Made by: Estelle Weyl
 Copyright:  CC-SA-NC-BY - Creative Commons Attribution-NonCommercial-ShareAlike
-Based on: http://estelle.github.com/ctwebdev
+Based on: http://estelle.github.com/AccessU
 -->
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
@@ -65,7 +65,7 @@ body {
     <h1>User Experience<br/> versus<br/> Developer Experience </h1>
   </header>
     <section class="content"><button id="killCSS" class="skiplink">Enable Screen Reader Access</button>
-      <p><a href="https://estelle.github.io/ctwebdev">https://estelle.github.io/ctwebdev</a><br/>Estelle Weyl</p></div>
+      <p><a href="https://estelle.github.io/AccessU">https://estelle.github.io/AccessU</a><br/>Estelle Weyl</p></div>
     </section>
 </div>
 
