--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ background-position: bottom;">
 
 
 <div class="slide intro large" style="background-color: hsl(300, 68%, 21%);">
-    <header><h1>Coding</h1></header>
+    <header><h1>Coding (Fast)</h1></header>
      <section class="content" style="margin-top: -1em;">
   <ul class="bulleted">
     <li>Frameworks</li>
