Update: remove references to Twitter

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ Storage 16 GB -->
 
     <h1>Estelle Weyl</h1>
     <h2><a href="http://www.standardista.com">Standardista.com</a> &middot;<a href="https://www.PerfMattersConf.com">PerfMattersConf.com</a>
-    </h2><h2><a href="http://www.twitter.com/estellevw">@estellevw</a> &middot;<a href="http://www.twitter.com/standardista">@standardista</a></h2>
+    </h2><h2><a href="https://front-end.social/@estelle">@estelle</a> </h2>
  </div>
  <div><img src="images/mozilla.png" alt="mozilla logo" style="height: 33vh"></div>
 
@@ -420,7 +420,7 @@ Storage 16 GB -->
 
 
     <h1>Estelle Weyl</h1>
-    <h2><a href="http://www.standardista.com">Standardista.com</a> &middot;<a href="https://www.PerfMattersConf.com">PerfMattersConf.com</a></h2><h2><a href="http://www.twitter.com/estellevw">@estellevw</a> &middot;<a href="http://www.twitter.com/standardista">@standardista</a></h2>
+    <h2><a href="http://www.standardista.com">Standardista.com</a> &middot;<a href="https://www.PerfMattersConf.com">PerfMattersConf.com</a></h2><h2><a href="https://front-end.social/@estelle">@estelle</a> </h2>
  </div>
  <div style="margin: 0 -70px;">
     <div class="floatright books">
@@ -462,12 +462,12 @@ Storage 16 GB -->
 
 <div class="slide large solid">
     <header><h1>Client Experience</h1></header>
-    <section class="TWEET">
-      <blockquote class="twitter-tweet" data-lang="en"><a><img src="images/estelle.jpg"></a>
+    <section class="TOOT">
+      <blockquote class="sm-toot" data-lang="en"><a><img src="images/estelle.jpg"></a>
         <div>
-          <a href=""><span>Estelle Weyl</span> <span>@estellevw</span></a>
+          <a href=""><span>Estelle Weyl</span> <a href="https://front-end.social/@estelle">@estelle</a></a>
           <p>
-          Companies, even tiny start ups, need to hire front end engineers from the get go. If you start with a non-FEE doing the front end, you create a tech stack and a tech debt that costs more to fix that it would to create. <a href="https://twitter.com/estellevw/status/1086345445998190592?ref_src=twsrc%5Etfw" class="date">January 18, 2019</a> </p></div></blockquote>
+          Companies, even tiny start ups, need to hire front end engineers from the get go. If you start with a non-FEE doing the front end, you create a tech stack and a tech debt that costs more to fix that it would to create. <a href="https://front-end.social/@estelle/status/1086345445998190592?ref_src=twsrc%5Etfw" class="date">January 18, 2019</a> </p></div></blockquote>
       </blockquote>
     </section>
   </div>
@@ -477,12 +477,12 @@ Storage 16 GB -->
 
 <div class="slide large solid">
     <header><h1>Client Experience</h1></header>
-    <section class="TWEET">
-      <blockquote class="twitter-tweet" data-lang="en"><a><img src="images/estelle.jpg"></a>
+    <section class="TOOT">
+      <blockquote class="sm-toot" data-lang="en"><a><img src="images/estelle.jpg"></a>
         <div>
-          <a href=""><span>Estelle Weyl</span> <span>@estellevw</span></a>
+          <a href=""><span>Estelle Weyl</span> <a href="https://front-end.social/@estelle">@estelle</a></a>
           <p>
-          If you don’t consider best practices, including performance, accessibility, internationalization, privacy, security & UX from day 1, you have debt you’ll end up always band-aiding: companies who think they can’t afford a FEE think they definitely can’t afford a complete refactor. <br/><a href="https://twitter.com/estellevw/status/1086345445998190592?ref_src=twsrc%5Etfw" class="date">January 18, 2019</a> </p></div></blockquote>
+          If you don’t consider best practices, including performance, accessibility, internationalization, privacy, security & UX from day 1, you have debt you’ll end up always band-aiding: companies who think they can’t afford a FEE think they definitely can’t afford a complete refactor. <br/><a href="https://front-end.social/@estelle/status/1086345445998190592?ref_src=twsrc%5Etfw" class="date">January 18, 2019</a> </p></div></blockquote>
       </blockquote>
     </section>
   </div>
@@ -615,12 +615,12 @@ background-position: bottom;">
 
 <div class="slide  large solid">
     <header><h1>Coding v. Engineering</h1></header>
-    <section class="TWEET">
+    <section class="TOOT">
       <blockquote>
         <a><img src="images/elliot.jpg"></a>
         <div>
           <a href=""><span>Elliott Sprehn</span> <span>@ElliottZ</span></a>
-          <p>So I&#39;m reading this <a href="https://twitter.com/TheAtlantic?ref_src=twsrc%5Etfw">@TheAtlantic</a> article and noticing the Chrome status bar is rapidly flickering lots of URLs. I opened the inspector network panel and see there&#39;s now over 9000 requests issued and 32MB used. I&#39;m not interacting with this page at all, just reading the text. <br/><img src="images/32mb.jpg" alt="status bar showing 32mb of download over 9272 requests" style="width: 100%" /> <a href="https://twitter.com/ElliottZ/status/1047306006894497792" class="date">October 3, 2018</a></p>
+          <p>So I&#39;m reading this <a href="#">@TheAtlantic</a> article and noticing the Chrome status bar is rapidly flickering lots of URLs. I opened the inspector network panel and see there&#39;s now over 9000 requests issued and 32MB used. I&#39;m not interacting with this page at all, just reading the text. <br/><img src="images/32mb.jpg" alt="status bar showing 32mb of download over 9272 requests" style="width: 100%" /> October 3, 2018</p>
         </div>
       </blockquote>
     </section>
@@ -743,8 +743,8 @@ background-position: bottom;">
 
 
 
-<div class="slide tweet"  style="background-color: hsl(210, 68%, 21%);">
-<blockquote class="twitter-tweet" data-lang="en">Poorly developed sites/apps <br/>can have real life consequences for users.</blockquote>
+<div class="slide toot"  style="background-color: hsl(210, 68%, 21%);">
+<blockquote class="sm-toot" data-lang="en">Poorly developed sites/apps <br/>can have real life consequences for users.</blockquote>
 <div class="dollar">€</div>
 <div class="dollar">£</div>
 <div class="dollar">¥</div>
@@ -798,7 +798,7 @@ background-position: bottom;">
 
 
 
-<div class="slide tweet"  style="background-color: hsl(310, 68%, 21%);">
+<div class="slide toot"  style="background-color: hsl(310, 68%, 21%);">
 <blockquote class="hugetext" data-lang="en">Just because no one uses your mobile site, doesn&#39;t mean you don&#39;t need to improve it. Maybe no one uses it because the experience sucks.
 </blockquote>
 </div>
@@ -816,7 +816,7 @@ background-position: bottom;">
 
 
 
-<div class="slide tweet"  style="background-color: hsl(190, 68%, 21%);">
+<div class="slide toot"  style="background-color: hsl(190, 68%, 21%);">
   
   <header><h1>TL;DR;</h1></header>
     <section class="content"><p style="font-size: 4vw">By keeping your client side code small and lightweight, you can literally open your product up to new markets.</p>
@@ -861,7 +861,7 @@ background-position: bottom;">
 
 
 
-<div class="slide tweet">
+<div class="slide toot">
 
 <blockquote><q>Load is not a single moment in time — it’s an experience that no one metric can fully capture. There are multiple moments during the load experience that can affect whether a user perceives it as "fast" or "slow".</q>
 <br/>
@@ -903,8 +903,8 @@ background-position: bottom;">
 
 
 
-<div class="slide tweet"  style="background-color: hsl(230, 68%, 21%);">
-  <blockquote class="twitter-tweet" lang="en">Performance measurements are objective.<br/><br/>Human perception of performance is subjective.</blockquote>
+<div class="slide toot"  style="background-color: hsl(230, 68%, 21%);">
+  <blockquote class="sm-toot" lang="en">Performance measurements are objective.<br/><br/>Human perception of performance is subjective.</blockquote>
 </div>
 
 
@@ -942,8 +942,8 @@ background-position: bottom;">
 
 
 
-<div class="slide tweet" style="background-color: hsl(240, 90%, 18%);">
-  <blockquote class="twitter-tweet" data-lang="en"><q lang="en" dir="ltr">I remember when 3G was primary mobile speed. It was slow but still worked, so why now when my phone says 3G it becomes completely useless?</q>
+<div class="slide toot" style="background-color: hsl(240, 90%, 18%);">
+  <blockquote class="sm-toot" data-lang="en"><q lang="en" dir="ltr">I remember when 3G was primary mobile speed. It was slow but still worked, so why now when my phone says 3G it becomes completely useless?</q>
     <cite>&mdash; Stephen Gundee     </cite>
 </blockquote>
 </div>
@@ -1078,8 +1078,8 @@ from 2007/2011 to 2017 (in Mbps), by quarter <span style="opacity: 0.3">4x</span
 
 
 
-<div class="slide tweet" style="background-color: hsl(370, 90%, 18%);">
-  <blockquote class="twitter-tweet" lang="en"><q>Is your battery draining too fast? Turn off everything that makes your smart phone smart. That&#39;ll fix it.</q>
+<div class="slide toot" style="background-color: hsl(370, 90%, 18%);">
+  <blockquote class="sm-toot" lang="en"><q>Is your battery draining too fast? Turn off everything that makes your smart phone smart. That&#39;ll fix it.</q>
     <cite>&mdash; Scott Hanselman     </cite>
 </blockquote>
 </div>
@@ -1131,12 +1131,6 @@ from 2007/2011 to 2017 (in Mbps), by quarter <span style="opacity: 0.3">4x</span
   </section>
 </div>
 
-
-
-
-<div class="slide intro"  style="background-color: hsl(60, 90%, 18%);">
-  <h2 style="font-size: 8vw; color: black">CSS?</h2>
-</div>
 
 
 <div class="slide invert">
@@ -2585,7 +2579,7 @@ pregnant_woman
     <h1>Estelle Weyl</h1>
     <h2><a href="http://www.standardista.com">www.standardista.com</a><br>
     <h2><a href="https://www.PerfMattersConf.com">www.PerfMattersConf.com</a><br>
-    </h2><h2><a href="http://www.twitter.com/estellevw">@estellevw</a><br><a href="http://www.twitter.com/standardista">@standardista</a></h2>
+    </h2><h2><a href="https://front-end.social/@estelle">@estelle</a></h2>
  </div>
 <div style="margin: 0 -70px;">
     <div class="floatright books">
